# python-physics

./: .gitignore  README.md  license  mathem.py  pyproject.toml  setup.py
physics/: __init__.py  classical.py  constants.py  electromagnetism.py  fluids.py  gravity.py  relativity.py  thermodynamics.py
src/physics/: Body.py  __init__.py  classical.py  constants.py  electromagnetism.py  fluids.py  gravity.py  mathem.py  relativity.py  thermodynamics.py
