[project]
name = "python-physics-gabri432"
version = "0.1.0"
authors = [
  { name="Gabriele Gatti", email="gabri432@gmail.com" },
]
description = "A package containing Physics formulas and constants for various calculations."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gabri432/python-physics"
"Bug Tracker" = "https://github.com/Gabri432/python-physics/issues"